@@ -401,7 +401,8 @@ $form_list
 					'dstfld1' => 'master_itemid',
 					'hostid' => $data['hostid'],
 					'excludeids' => $data['itemid'] != 0 ? [$data['itemid']] : [],
-					'webitems' => true
+					'webitems' => true,
+					'normal_only' => true
 				]
 			]
 		]))
