@@ -1,6 +1,7 @@
 Changes for 4.2.0rc1
 
 New features:
+A.F....... [ZBX-15286] dropped support use of discovered items as master (Sasha)
 
 Bug fixes:
 ..F....... [ZBX-15468] fixed LDAP configuration form not being able to save changes when user password field is empty string (gcalenko)
